examples/bad/type_mul_error.mtch
int main() {
    int a = 8;
    int b = 0;
    string s = "Test";

    int d = a * s;

    return 0;
}